force-app/main/default/objects/DocGeneratorSettings__c/DocGeneratorSettings__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT10179 - Created for PVL phase 1</description>
    <label>Doc Generator Settings</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doc Generator Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>