force-app/main/default/objects/DocGeneratorSettings__c/fields/DocumentTemplateName__c.field-meta.xml
<CustomField>
    <fullName>DocumentTemplateName__c</fullName>
    <description>PacPoint-MV101719 - Created for PVL phase 1</description>
    <label>Document Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>