force-app/main/default/objects/DocGeneratorSettings__c/fields/ReadyForDeployment__c.field-meta.xml
<CustomField>
    <fullName>ReadyForDeployment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready For Deployment</label>
    <type>Checkbox</type>
</CustomField>