force-app/main/default/objects/DocGeneratorSettings__c/fields/TemplateContent__c.field-meta.xml
<CustomField>
    <fullName>TemplateContent__c</fullName>
    <description>PacPoint-AZ231019 - Created for PVL phase 1</description>
    <label>Template Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>