force-app/main/default/objects/DocGeneratorSettings__c/fields/TriggeringField__c.field-meta.xml
<CustomField>
    <fullName>TriggeringField__c</fullName>
    <description>PacPoint-MV101719 - Created for PVL phase 1</description>
    <label>Triggering Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>