force-app/main/default/objects/DocGeneratorSettings__c/fields/UniqueName__c.field-meta.xml
<CustomField>
    <fullName>UniqueName__c</fullName>
    <externalId>true</externalId>
    <label>UniqueName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>