force-app/main/default/objects/DocGeneratorSettings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DocumentTemplateName__c</columns>
    <columns>UniqueName__c</columns>
    <columns>DocumentType__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ReadyForDeployment__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>